ajeitando primeira nav

--- a/index.html
+++ b/index.html
@@ -13,22 +13,26 @@
             <div class="logo">
                 <img src="https://s3-media0.fl.yelpcdn.com/assets/srv0/yelp_design_cdn/2d2a7a4342fc/assets/img/brand/logo_desktop_white.svg" alt="logo yelp">
             </div>
-            <div class="search">
-
-            </div>
+            <div class="buscas">
+                <div class="search">
+                    <h3>Pagina de buscas</h3>
+                </div>
+                <div class="cidade">
+                    <h3>| Recife - PE</h3>
+                </div>
+                <div class="botao-busca">
+                    <img src="./imagens/pesquisa.png" alt="Lupa branca">
+                </div>
+            </div>    
             <div class="nav">
                 <a href="">oi</a>
                 <a href="">ai</a>
-                <a href="">ei</a>
-            </div>
-            <div class="caixa-de-busca">
-                <h3>Pagina de buscas</h3>
-            </div>
-            <div class="cidade">
-                <h3>| Recife - PE</h3>
-            </div>
-            <div class="botao-busca">
-                <p>00</p>
+                <div class="acesso">
+                    <a href="">Acessar</a>
+                </div>  
+                <div class="cadastro">
+                    <a href="">Cadastre-se</a>
+                </div>  
             </div>
         </div>
         <div class="nav2">
