--- a/index.html
+++ b/index.html
@@ -21,18 +21,18 @@
                     <h3>| Recife - PE</h3>
                 </div>
                 <div class="botao-busca">
-                    <img src="./imagens/pesquisa.png" alt="Lupa branca">
+                    <img src="./imagens/lupa.png" alt="Lupa branca">
                 </div>
             </div>    
             <div class="nav">
-                <a href="">oi</a>
-                <a href="">ai</a>
-                <div class="acesso">
-                    <a href="">Acessar</a>
-                </div>  
-                <div class="cadastro">
-                    <a href="">Cadastre-se</a>
-                </div>  
+                <a href="">Yelp for Business</a>
+                <a href="">Escrever uma avaliação</a>
+                <button id="acessar">
+                    Acessar
+                </button>
+                <button id="cadastrar">
+                    Cadastre-se
+                </button>
             </div>
         </div>
         <div class="nav2">
