--- a/index.html
+++ b/index.html
@@ -36,8 +36,27 @@
             </div>
         </div>
         <div class="nav2">
+            <a href="">Restaurantes</a>
+            <a href="">Serviços à domicílio</a>
+            <a href="">Serviços de automóveis</a>
+            <p>Mais</p>
+        </div>
+        <h1>Conecte-se com grandes empresas locais</h1>
+    </div>
+    <div class="nav3">
+        <h1>Atividades Recentes</h1>
+    </div>
+    <div class="container">
+        <div class="bloco1">
             
         </div>
+        <div class="bloco2">
+
+        </div>
+        <div class="bloco3">
+
+        </div>
     </div>
+    
 </body>
 </html>
