clone do yelp concluido

--- a/index.html
+++ b/index.html
@@ -48,15 +48,71 @@
     </div>
     <div class="container">
         <div class="bloco1">
-            
+            <div class="perfil">
+                <div class="imagem">
+                    <img src="./imagens/perfil.png" alt="perfil simbolo">
+                </div>
+                <div class="titulo">
+                    <h3>Edward D.</h3>
+                    <p>Adicionou 2 fotos</p>
+                </div>   
+            </div>
+            <a href="">Bodega do Véio</a>
+            <div class="imagemb1">
+            </div>
+            <div class="perfil1">
+                <div class="likeimage">
+                    <img src="./imagens/Like.png" alt="Like simbolo">
+                </div>
+                <div class="likes">
+                    <p>100 likes</p>
+                </div>   
+            </div>
         </div>
         <div class="bloco2">
-
+            <div class="perfil2">
+                <div class="imagem">
+                    <img src="./imagens/perfil.png" alt="perfil simbolo">
+                </div>
+                <div class="titulo">
+                    <h3>Edward D.</h3>
+                    <p>Adicionou 6 fotos</p>
+                </div>   
+            </div>
+            <a href="">Museu do Mamulengo</a>
+            <div class="imagemb2">
+            </div>
+            <div class="perfil22">
+                <div class="likeimage">
+                    <img src="./imagens/Like.png" alt="Like simbolo">
+                </div>
+                <div class="likes">
+                    <p>200 likes</p>
+                </div>
+            </div>
         </div>
         <div class="bloco3">
-
+            <div class="perfil3">
+                <div class="imagem">
+                    <img src="./imagens/perfil.png" alt="perfil simbolo">
+                </div>
+                <div class="titulo">
+                    <h3>Edward D.</h3>
+                    <p>Adicionou 8 fotos</p>
+                </div>   
+            </div>
+            <a href="">Bodega do Véio</a>
+            <div class="imagemb3">
+            </div>
+            <div class="perfil33">
+                <div class="likeimage">
+                    <img src="./imagens/Like.png" alt="Like simbolo">
+                </div>
+                <div class="likes">
+                    <p>300 likes</p>
+                </div>
+            </div>
         </div>
     </div>
-    
 </body>
 </html>
