detalhamento e correção de bugs

--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
                 </div>   
             </div>
             <a href="">Bodega do Véio</a>
-            <div class="imagemb1">
+            <div class="imagem1">
+                <img src="./imagens/ideia.jpg" alt="ideia1">
             </div>
             <div class="perfil1">
                 <div class="likeimage">
@@ -80,7 +81,8 @@
                 </div>   
             </div>
             <a href="">Museu do Mamulengo</a>
-            <div class="imagemb2">
+            <div class="imagem2">
+                <img src="./imagens/ideia.jpg" alt="ideia2">
             </div>
             <div class="perfil22">
                 <div class="likeimage">
@@ -102,7 +104,8 @@
                 </div>   
             </div>
             <a href="">Bodega do Véio</a>
-            <div class="imagemb3">
+            <div class="imagem3">
+                <img src="./imagens/Coroa.jpg" alt="coroa">
             </div>
             <div class="perfil33">
                 <div class="likeimage">
